<resources>
    <string name="app_name">WhatNews</string>
    <string name="arts">Arts</string>
    <string name="fashion_style"><![CDATA[Fashion & style]]></string>
    <string name="sports">Sports</string>
    <string name="filter">Filter</string>
    <string name="date">Begin date:</string>
    <string name="date_example">03/12/1997</string>
    <string name="sort_by">Sort by:</string>
    <string name="new_desk">New desk:</string>
    <string name="save">Save</string>
    <string name="slash">/</string>
    <string name="title">Title</string>
    <string name="search">Search</string>
    <string name="education">Education</string>
    <string name="publish_date">2016–01–14</string>
    <string name="connection_failed">Connection failed</string>
    <string name="no_internet">Hmm, no internet connection.</string>
    <string name="try_again">Try again</string>
</resources>
